# ASP

./: CMakeLists.txt  andrija.cpp  andrijadismat.c  apporxE.cpp  approxPi.cpp  binarySearch.cpp  ostaviSlova.cpp  pred02.cpp  printNegatives.cpp  sumAllSquares.cpp  test.cpp
06-Stog/: StackStatic.cpp
07-Red/: QueueList.cpp
2.Labos/: 1.zad.cpp
