cmake_minimum_required(VERSION 3.23)
project(ASP1)

set(CMAKE_CXX_STANDARD 14)


add_executable(main main.cpp)
add_executable(StackStatic 06-Stog/StackStatic.cpp)
add_executable(Palindrome Palindrome.cpp)
add_executable(Searching Searching.cpp)
add_executable(QueueList 07-Red/QueueList.cpp)
add_executable(andrija andrija.cpp)
add_executable(1.zad 2.Labos/1.zad.cpp)